Corrected CSS for dashboard for improved visibility

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,21 +2,5 @@
   text-align: center;
   background: black;
   color: white;
+  height: 100vh;
 }
-
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
