--- a/client/src/Cell.module.css
+++ b/client/src/Cell.module.css
@@ -1,21 +1,26 @@
 .cell {
-    width: 150px;
-    height: 150px;
-    max-width: 100%;
-    margin: 5px;
-    border-width: 5px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    border-left: 3px solid black;
+    border-bottom: 3px solid black;
+    flex: 1 1;
+    align-items: center;
+    justify-content: center;
     background-color: blue;
-    font-size: 11px;
-    transition: all 0.5s ease-in-out;   
+    /* transition: all 0.4s ease-in;    */
+}
+
+.cell h1 {
+    margin: 0;
 }
 
 .cell.fullscreen {
     z-index: 9999; 
     width: 100vw; 
     height: 100vh; 
-    position: absolute; 
-    top: 0; 
+    position: fixed; 
+    top: 0;
     left: 0;
-    text-align: center;
     font-size: 50px;
 }
