--- a/client/src/Dashboard.module.css
+++ b/client/src/Dashboard.module.css
@@ -1,23 +1,32 @@
 .dashboard {
     display: flex;
     flex-direction: column;
+    height: 100%;
+    width: 100%;
+    min-height: 620px;
+    min-width: 950px;
 }
 .category-row {
     display: flex;
     flex-direction: row;
-    align-self: center;
+    border-bottom: 3px solid black;
     color: white;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    flex: 1 1;
+    font-size: 12px;
 }
 .questions {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    align-self: center;
+    width: 100%;
+    flex: 5 1;
+    font-size: 17px;
 }
 .question-column {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-self: center;
+    flex: 1 1;
     color: #f6be18;
 }
